Fixed gradient color on mobile

--- a/src/styles/sections/ui-headers.css
+++ b/src/styles/sections/ui-headers.css
@@ -225,7 +225,7 @@
     top: 0;
     bottom: 0;
     width: 24px;
-    background: linear-gradient(to right, var(--background-primary) 0%, transparent 100%);
+    background: linear-gradient(to right, var(--nn-theme-list-bg) 0%, transparent 100%);
     pointer-events: none;
     z-index: 1;
 }
